gap-fix Done

--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,11 @@ body {
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: repeat(4, 200px);
-	width: 88vw;
+	width: 89%;
 	margin: auto;
-	gap: 20px;
+	column-gap: 2%;
+	row-gap: 20px;
+	/* margin-bottom: 20px; */
 }
 
 header {
@@ -52,9 +54,11 @@ footer {
 	display: grid;
 	grid-column: 1 / 13;
 	grid-template-columns: repeat(4, 1fr);
+	column-gap: 2%;
+	padding: 0 10px;
 }
 
 section[class*="footer"] {
 	border: 1px solid #333;
-	margin: 10px
+	margin: 10px 0;
 }
